# BCPPUL

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_debug.bat  build_release.bat  prepare_lib.bat
cmake/: BCPPULConfigVersion.cmake.in
examples/: main.cpp
include/: bcppul.h
include/bcppul/: bcppul.h  logging.h  properties.h  timer.h  version_config.h.in
lib/bcppul/include/bcppul/: version_config.h
lib/bcppul/lib/: bcppul_static_debug.lib  bcppul_static_release.lib
src/: bcppul.cpp  bcppul_math.cpp  bcppul_math_precalc.cpp  file_utils.cpp  logging.cpp  properties.cpp  string_utils.cpp  timer.cpp
